githubcloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create a VPC with public and private subnets, internet gateway, and routing

Resources:

  task15:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/18
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: task15VPC

  task15InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: task15InternetGateway

  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref task15
      InternetGatewayId: !Ref task15InternetGateway

  task15PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref task15
      CidrBlock: 10.0.0.0/19
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: task15-Public-Subnet

  task15PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref task15
      CidrBlock: 10.0.32.0/19
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: task15-Private-Subnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref task15
      Tags:
        - Key: Name
          Value: task15-PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref task15
      Tags:
        - Key: Name
          Value: task15-PrivateRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachInternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref task15InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref task15PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref task15PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP from anywhere
      VpcId: !Ref task15
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: task15-PublicSG

  task15EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-002f6e91abff6eb96 
      SubnetId: !Ref task15PublicSubnet
      SecurityGroupIds:
        - !Ref PublicSecurityGroup
      KeyName: key
      Tags:
        - Key: Name
          Value: task15-EC2
